serde_with_macros/tests/compile-fail/skip-none-not-struct.rs
use serde_with_macros::skip_serializing_none;

#[skip_serializing_none]
fn test() {}

fn main() {}
